# SpaceAlignment

./: .gitignore  Calibration.py  Check.py  Covert2Tliodataset.py  DataCheck.py  DataCompress.py  GroundTruth.py  README.md  TestOnlyModel.py  TimeMatch.py  TimeMatchCorr.py  ViewTrace.py  hand_eye.py  main.py  pyproject.toml  time_diff.py  time_matching.py
base/: __init__.py  action.py  arcore_data.py  args_parser.py  basetype.py  calibrate.py  datatype.py  imu_data.py  interpolate.py  rtab_data.py  space.py  time_diff.py
rerun_ext/: __init__.py  rerun_calibration.py
scripts/: run.py  run.sh
tests/: README.md  test_basetype.py  test_interpolate.py  test_time_matching.py
